<resources>
    <string name="app_name">KitchenApp</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">PREVIOUS</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Welcome!</string>
    <string name="slide_1_desc">Handle orders faster with KitchenApps</string>

    <string name="slide_2_title">Create Order</string>
    <string name="slide_2_desc">Create order</string>

    <string name="slide_3_title">Share with co-workers</string>
    <string name="slide_3_desc">Cook and waiter</string>

    <string name="slide_4_title">Get started!</string>
    <string name="slide_4_desc">Tap on Sign up to start</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>


    <!--Login-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_google_login">Google+</string>
    <string name="lbl_signup"><u>Sign Up</u></string>

</resources>
