<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="55"
            android:gravity="center"
            android:orientation="vertical">


            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_edt"
                android:drawableLeft="@mipmap/icon_username"
                android:drawablePadding="9dp"
                android:hint="@string/hint_email"
                android:padding="8dp"
                android:singleLine="true"
                android:textColor="@color/cast_expanded_controller_text_color"
                android:textColorHint="@color/cast_expanded_controller_text_color" />


            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt"
                android:drawableLeft="@mipmap/icon_password"
                android:drawablePadding="5dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/cast_expanded_controller_text_color"
                android:textColorHint="@color/cast_expanded_controller_text_color" />


            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_button"
                android:onClick="onClick"
                android:text="@string/lbl_login"
                android:textColor="@color/cast_expanded_controller_text_color"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_google"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_button"
                android:onClick="onClick"
                android:text="@string/lbl_google_login"
                android:textColor="@color/cast_expanded_controller_text_color"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_signup"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/bg_screen2" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
